--- a/nav.css
+++ b/nav.css
@@ -18,10 +18,6 @@ nav {
   font-size: 1.2rem;
 }
 
-.right-nav li {
-  list-style: none;
-}
-
 .nav-link {
   color: var(--color-white);
 }
@@ -41,8 +37,8 @@ a:active {
 
 .logo {
   overflow: hidden;
-  height: 5rem;
-  width: 5rem;
+  height: 100px;
+  width: 100px;
 }
 
 main {
@@ -96,4 +92,10 @@ main {
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+.hamburger {
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
 }
