--- a/css/reset.css
+++ b/css/reset.css
@@ -40,3 +40,26 @@ textarea,
 select {
   font: inherit;
 }
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 25px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.14, rgb(122, 153, 217)),
+    color-stop(0.42, rgb(73, 125, 189)),
+    color-stop(0.76, var(--color-default))
+  );
+}
