--- a/css/utility.css
+++ b/css/utility.css
@@ -1,7 +1,3 @@
-.border-box {
-  box-sizing: border-box;
-}
-
 /* display */
 
 .block {
@@ -14,6 +10,10 @@
 
 .flex {
   display: flex;
+}
+
+.none {
+  display: none;
 }
 
 /* flex direction  */
