--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700;900&family=Raleway:wght@300;500;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -11,6 +13,10 @@ body {
   font-size: 62.5%;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  font-family: "Fira Sans Extra Condensed", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-family: "Raleway", sans-serif;
+  background-color: var(--color-white-wolf);
 }
 
 img,
