--- a/nav.css
+++ b/nav.css
@@ -1,8 +1,3 @@
-body {
-  background-color: whitesmoke;
-  font-size: 62.5%;
-}
-
 .nav-container {
   background-color: var(--color-default);
 }
@@ -16,6 +11,10 @@ nav {
   padding: 1rem;
   font-weight: var(--font-semibold);
   font-size: 1.2rem;
+}
+
+.right-nav li {
+  list-style: none;
 }
 
 .nav-link {
@@ -95,6 +94,7 @@ main {
 }
 
 .hamburger {
+  margin-left: 0.5rem;
   height: 20px;
   width: 20px;
   cursor: pointer;
