--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700;900&family=Raleway:wght@300;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@900&family=Roboto+Mono:wght@300;400;500;600;700&display=swap");
 
 *,
 *::before,
@@ -13,9 +13,8 @@ body {
   font-size: 62.5%;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  font-family: "Fira Sans Extra Condensed", sans-serif;
   font-family: "Poppins", sans-serif;
-  font-family: "Raleway", sans-serif;
+  font-family: "Roboto Mono", monospace;
   background-color: var(--color-white-wolf);
 }
 
