Feat: Added Avatar Components

--- a/sidebar.css
+++ b/sidebar.css
@@ -5,7 +5,7 @@
 }
 
 .docs-content {
-  margin-top: 2rem;
+  margin: 0 0 2rem 0;
 }
 
 .docs-sidebar {
@@ -82,6 +82,7 @@
     display: none;
   }
 }
+
 @media screen and (max-width: 1032px) {
   .docs-container {
     padding: 1rem;
