Feat: Added Badge component

--- a/css/base.css
+++ b/css/base.css
@@ -14,3 +14,4 @@
 /* components  */
 @import "/components/alert/alert.css";
 @import "/components/avatar/avatar.css";
+@import "/components//badge/badge.css";
