--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@
 }
 
 .divider {
-  margin-bottom: 2rem;
+  margin: 2rem 0;
   width: 100%;
   height: 1px;
   background-color: var(--color-grey);
