--- a/css/base.css
+++ b/css/base.css
@@ -14,4 +14,5 @@
 /* components  */
 @import "/components/alert/alert.css";
 @import "/components/avatar/avatar.css";
-@import "/components//badge/badge.css";
+@import "/components/badge/badge.css";
+@import "/components/button/button.css";
