Feat: Added Input Components

--- a/css/base.css
+++ b/css/base.css
@@ -17,3 +17,4 @@
 @import "/components/badge/badge.css";
 @import "/components/button/button.css";
 @import "/components/image/image.css";
+@import "/components/input/input.css";
