--- a/css/base.css
+++ b/css/base.css
@@ -18,3 +18,4 @@
 @import "/components/button/button.css";
 @import "/components/image/image.css";
 @import "/components/input/input.css";
+@import "/components/card/card.css";
