Fix: Added alt for images

--- a/components/card/card.html
+++ b/components/card/card.html
@@ -79,7 +79,11 @@
 
           <div class="example-div p-4">
             <div class="card">
-              <img class="card-image" src="/assets/images/ecomm3.jpg" />
+              <img
+                class="card-image"
+                src="/assets/images/ecomm3.jpg"
+                alt="image"
+              />
               <div class="card-content">
                 <h3 class="card-header">Sea shells</h3>
                 <p class="card-text">Straight from the sea.</p>
@@ -144,7 +148,11 @@
 
           <div class="example-div p-4">
             <div class="card text-overlay">
-              <img class="card-image" src="/assets/images/ecomm3.jpg" />
+              <img
+                class="card-image"
+                src="/assets/images/ecomm3.jpg"
+                alt="image"
+              />
               <div class="card-content">
                 <h3 class="card-header overlay-text">Sea shells</h3>
                 <!--<p class="card-text">Straight from the sea.</p> -->
@@ -180,7 +188,11 @@
           <div class="example-div p-4">
             <div class="card badge-card">
               <div class="image-badge">Best Value</div>
-              <img class="card-image" src="/assets/images/ecomm3.jpg" />
+              <img
+                class="card-image"
+                src="/assets/images/ecomm3.jpg"
+                alt="image"
+              />
               <div class="card-content">
                 <h3 class="card-header">Sea shells</h3>
                 <p class="card-text">Straight from the sea.</p>
@@ -214,8 +226,12 @@
           <div class="example-div p-4">
             <div class="card dismissable-card">
               <div class="image-badge">Best Value</div>
-              <img class="svg" src="/assets/svg/heart.svg" />
-              <img class="card-image" src="/assets/images/ecomm3.jpg" />
+              <img class="svg" src="/assets/svg/heart.svg" alt="heart-svg" />
+              <img
+                class="card-image"
+                src="/assets/images/ecomm3.jpg"
+                alt="image"
+              />
               <div class="card-content">
                 <h3 class="card-header">Sea shells</h3>
                 <p class="card-text">Straight from the sea.</p>
