Feat: Added Navbar Component

--- a/components/card/card.html
+++ b/components/card/card.html
@@ -13,7 +13,7 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="./index.html">
+            <a href="../../../index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a class="right-nav flex" href="#">Docs</a>
@@ -57,6 +57,9 @@
               </li>
               <li>
                 <a href="/Components/input/input.html"> Input </a>
+              </li>
+              <li>
+                <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
             </ul>
           </div>
