--- a/css/base.css
+++ b/css/base.css
@@ -19,3 +19,4 @@
 @import "/components/image/image.css";
 @import "/components/input/input.css";
 @import "/components/card/card.css";
+@import "/components/navbar/navbar.css";
