Feat: Added Snackbar Component

--- a/components/card/card.html
+++ b/components/card/card.html
@@ -61,6 +61,9 @@
               <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
+              <li>
+                <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
+              </li>
             </ul>
           </div>
         </div>
