--- a/css/base.css
+++ b/css/base.css
@@ -20,3 +20,4 @@
 @import "/components/input/input.css";
 @import "/components/card/card.css";
 @import "/components/navbar/navbar.css";
+@import "/components/snackbar/snackbar.css";
