--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,7 +1,7 @@
 .card {
   height: 450px;
   width: 350px;
-  background-color: white;
+  background-color: var(--color-white);
   text-align: center;
   position: relative;
 }
@@ -17,18 +17,18 @@
   margin: 0.2rem auto;
   padding-top: 0.5rem;
   font-size: 2rem;
-  color: #474747;
+  color: var(--color-black);
 }
 
 .card-text {
   display: inline-block;
   margin: 0.2rem auto;
   font-size: 1rem;
-  color: #474747;
+  color: var(--color-black);
 }
 
 .card-btn > p {
-  color: #8d8d8d;
+  color: var(--card-shadow);
   font-size: 1.5rem;
   overflow: hidden;
 }
