Feat: Added List component

--- a/components/card/card.html
+++ b/components/card/card.html
@@ -59,6 +59,9 @@
                 <a href="/Components/input/input.html"> Input </a>
               </li>
               <li>
+                <a href="/Components/list/list.html"> List </a>
+              </li>
+              <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
               <li>
