--- a/css/base.css
+++ b/css/base.css
@@ -19,5 +19,6 @@
 @import "/components/image/image.css";
 @import "/components/input/input.css";
 @import "/components/card/card.css";
+@import "/components/list/list.css";
 @import "/components/navbar/navbar.css";
 @import "/components/snackbar/snackbar.css";
