Feat: Added Installation Guide

--- a/components/card/card.html
+++ b/components/card/card.html
@@ -27,7 +27,7 @@
           <!-- Installation Page -->
           <div>
             <div class="list-topic">
-              <a href="/Get Started/installation.html"> Installation </a>
+              <a href="/installation.html"> Installation </a>
             </div>
           </div>
 
