--- a/components/list/list.html
+++ b/components/list/list.html
@@ -16,7 +16,11 @@
             <a href="../../../index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
-            <a class="right-nav flex" href="#">Docs</a>
+            <a
+              class="right-nav flex"
+              href="https://github.com/shuntzhere/Shore-UI"
+              >Github</a
+            >
           </div>
           <!-- <div></div> -->
         </nav>
