--- a/css/base.css
+++ b/css/base.css
@@ -16,9 +16,10 @@
 @import "/components/avatar/avatar.css";
 @import "/components/badge/badge.css";
 @import "/components/button/button.css";
+@import "/components/card/card.css";
+@import "/components/grid/grid.css";
 @import "/components/image/image.css";
 @import "/components/input/input.css";
-@import "/components/card/card.css";
 @import "/components/list/list.css";
 @import "/components/navbar/navbar.css";
 @import "/components/snackbar/snackbar.css";
