--- a/css/base.css
+++ b/css/base.css
@@ -23,3 +23,4 @@
 @import "/components/list/list.css";
 @import "/components/navbar/navbar.css";
 @import "/components/snackbar/snackbar.css";
+@import "/components/typography/textUtil.css";
