--- a/css/typography.css
+++ b/css/typography.css
@@ -1,13 +1,13 @@
 h1,
 .xl-p {
-  font-size: 48px;
-  line-height: 64px;
+  font-size: 36px;
+  line-height: 36px;
 }
 
 h2,
 .lg-p {
-  font-size: 32px;
-  line-height: 32px;
+  font-size: 30px;
+  line-height: 30px;
 }
 
 h3,
@@ -18,12 +18,18 @@ h3,
 
 h4,
 .sm-p {
-  font-size: 16px;
-  line-height: 16px;
+  font-size: 18px;
+  line-height: 18px;
 }
 
 h5,
 .xs-p {
-  font-size: 8px;
-  line-height: 8px;
+  font-size: 12px;
+  line-height: 12px;
+}
+
+h6,
+.xs-p {
+  font-size: 6px;
+  line-height: 6px;
 }
