Feat: Added Modal component

--- a/css/base.css
+++ b/css/base.css
@@ -24,3 +24,4 @@
 @import "/components/navbar/navbar.css";
 @import "/components/snackbar/snackbar.css";
 @import "/components/typography/textUtil.css";
+@import "/components/modal/modal.css";
