Feat: Added Rating Component

--- a/css/base.css
+++ b/css/base.css
@@ -25,3 +25,4 @@
 @import "/components/snackbar/snackbar.css";
 @import "/components/typography/textUtil.css";
 @import "/components/modal/modal.css";
+@import "/components/rating/rating.css";
