--- a/main.css
+++ b/main.css
@@ -47,3 +47,16 @@
   margin-bottom: 1.5rem;
   flex-wrap: wrap;
 }
+.iframe-container {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.iframe-container > iframe {
+  overflow: scroll;
+  border: 0;
+  height: 100%;
+  display: block;
+  width: 100%;
+}
