--- a/components/rating/rating.html
+++ b/components/rating/rating.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Rating</title>
+    <title>Rating | Shore-UI</title>
   </head>
   <body>
     <div class="container">
@@ -17,7 +17,7 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -105,7 +105,7 @@
 
           <div class="divider"></div>
 
-          <!-- Image -->
+          <!-- Rating -->
 
           <div class="content-head mb-4">Ratings</div>
 
