Fix: Updated docs links and Iframes

--- a/components/image/image.html
+++ b/components/image/image.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Image</title>
+    <title>Image | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -45,16 +45,19 @@
                 <a href="/components/alert/alert.html"> Alert </a>
               </li>
               <li>
-                <a href="/Components/avatar/avatar.html"> Avatar </a>
+                <a href="/Components/Avatar/avatar.html"> Avatar </a>
               </li>
               <li>
-                <a href="/Components/badge/badge.html"> Badge </a>
+                <a href="/Components/Badge/badge.html"> Badge </a>
               </li>
               <li>
-                <a href="/Components/button/button.html"> Button </a>
+                <a href="/Components/Button/button.html"> Button </a>
               </li>
               <li>
-                <a href="/Components/card/card.html"> Card </a>
+                <a href="/Components/Card/card.html"> Card </a>
+              </li>
+              <li>
+                <a href="/Components/grid/grid.html"> Grid </a>
               </li>
               <li>
                 <a class="active" href="/Components/image/image.html">
@@ -62,16 +65,27 @@
                 </a>
               </li>
               <li>
-                <a href="/Components/input/input.html"> Input </a>
+                <a href="/Components/Input/input.html"> Input </a>
               </li>
               <li>
                 <a href="/Components/list/list.html"> List </a>
               </li>
               <li>
+                <a href="/Components/modal/modal.html"> Modal </a>
+              </li>
+              <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
               <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
+              </li>
+              <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
+              </li>
+              <li>
+                <a href="/Components/typography/typography.html">
+                  Typography
+                </a>
               </li>
             </ul>
           </div>
@@ -125,20 +139,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522flex%2520flex-col%2522%253E%250A%2520%2520%253Cdiv%250A%2520%2520%2520%2520class%253D%2522image-container%2520flex%2520flex-items-center%2520justify-between%2522%250A%2520%2520%253E%250A%2520%2520%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522image-square%2522%2520src%253D%2522%252Fassets%252Fimages%252Favatar.jpg%2522%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%253Ch3%253ESquared%2520Image%253C%252Fh3%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522image-round%2522%2520%2520src%253D%2522%252Fassets%252Fimages%252Fimage2.jpg%2522%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%253Ch3%253ERounded%2520Image%253C%252Fh3%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522image-responsive%2522%2520%2520src%253D%2522%252Fassets%252Fimages%252Fimage1.jpg%2522%2520%252F%253E%250A%2520%2520%2520%2520%253Ch3%253EResponsive%2520Image%253C%252Fh3%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 524px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-
-          <div class="divider"></div>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522flex%2520flex-col%2520align-center%2522%253E%250A%2520%2520%253Cdiv%250A%2520%2520%2520%2520class%253D%2522image-container%2520flex%2520flex-items-center%2520justify-between%2522%250A%2520%2520%253E%250A%2520%2520%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522%252Fassets%252Fimages%252Favatar.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520class%253D%2522image-square%2520m-4%2522%250A%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%253Ch4%253ESquared%2520Image%253C%252Fh4%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520class%253D%2522image-round%2520m-4%2522%250A%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%253Ch4%253ERounded%2520Image%253C%252Fh4%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520src%253D%2522%252Fassets%252Fimages%252Fimage1.jpg%2522%250A%2520%2520%2520%2520%2520%2520class%253D%2522image-responsive%2520m-4%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Ch4%253EResponsive%2520Image%253C%252Fh4%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
