--- a/components/rating/rating.html
+++ b/components/rating/rating.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Rating | Shore-UI</title>
+    <title>Rating | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -26,7 +26,6 @@
               >Github</a
             >
           </div>
-          <!-- <div></div> -->
         </nav>
       </div>
 
