--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Alert</title>
+    <title>Alert | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <nav class="">
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -22,7 +22,6 @@
               >Github</a
             >
           </div>
-          <!-- <div></div> -->
         </nav>
       </div>
 
@@ -59,6 +58,9 @@
                 <a href="/Components/Card/card.html"> Card </a>
               </li>
               <li>
+                <a href="/Components/grid/grid.html"> Grid </a>
+              </li>
+              <li>
                 <a href="/Components/image/image.html"> Image </a>
               </li>
               <li>
@@ -68,10 +70,21 @@
                 <a href="/Components/list/list.html"> List </a>
               </li>
               <li>
+                <a href="/Components/modal/modal.html"> Modal </a>
+              </li>
+              <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
               <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
+              </li>
+              <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
+              </li>
+              <li>
+                <a href="/Components/typography/typography.html">
+                  Typography
+                </a>
               </li>
             </ul>
           </div>
@@ -111,19 +124,13 @@
             </div>
           </div>
 
-          <iframe
-            class="my-6"
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=auto&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522example-div%2520flex-col%2520p-4%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522alert%2520flex%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fhome-solid.svg%2522%2520%252F%253E%250A%2520%2520%2520%2520%253Cstrong%253EPrimary%21%253C%252Fstrong%253E%2520Primary%2520Alert%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522alert%2520warning%2520flex%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fexclamation-solid.svg%2522%2520%252F%253E%250A%2520%2520%2520%2520%253Cstrong%253EWarning%21%253C%252Fstrong%253E%2520Warning%2520Alert%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522alert%2520error%2520flex%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252F%252Fsvg%252Ftimes-solid.svg%2522%2520%252F%253E%250A%2520%2520%2520%2520%253Cstrong%253EError%21%253C%252Fstrong%253E%2520Error%2520Alert%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522alert%2520success%2520flex%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fcheck-solid.svg%2522%2520%252F%253E%250A%2520%2520%2520%2520%253Cstrong%253ESuccess%21%253C%252Fstrong%253E%2520Success%2520Alert%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 500px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522alert%2520flex%2522%253E%250A%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fhome-solid.svg%2522%2520%252F%253E%250A%2520%2520%253Cstrong%253EPrimary%21%253C%252Fstrong%253E%2520Primary%2520Alert%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522alert%2520warning%2520flex%2522%253E%250A%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fexclamation-solid.svg%2522%2520%252F%253E%250A%2520%2520%253Cstrong%253EWarning%21%253C%252Fstrong%253E%2520Warning%2520Alert%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522alert%2520error%2520flex%2522%253E%250A%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252F%252Fsvg%252Ftimes-solid.svg%2522%2520%252F%253E%250A%2520%2520%253Cstrong%253EError%21%253C%252Fstrong%253E%2520Error%2520Alert%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522alert%2520success%2520flex%2522%253E%250A%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fcheck-solid.svg%2522%2520%252F%253E%250A%2520%2520%253Cstrong%253ESuccess%21%253C%252Fstrong%253E%2520Success%2520Alert%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
@@ -157,19 +164,13 @@
             </div>
           </div>
 
-          <iframe
-            class="my-6"
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=auto&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522example-div%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522alert%2520outline-primary%2520flex%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fhome-solid.svg%2522%2520%252F%253E%250A%2520%2520%2520%2520%253Cstrong%253EPrimary%21%253C%252Fstrong%253E%2520This%2520is%2520a%2520Primary%2520Alert%250A%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%253Cdiv%2520class%253D%2522alert%2520outline-warning%2520flex%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fexclamation-solid.svg%2522%2520%252F%253E%250A%2520%2520%2520%2520%253Cstrong%253EWarning%21%253C%252Fstrong%253E%2520This%2520is%2520a%2520Warning%2520Alert%250A%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%253Cdiv%2520class%253D%2522alert%2520outline-error%2520flex%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252F%252Fsvg%252Ftimes-solid.svg%2522%2520%252F%253E%250A%2520%2520%2520%2520%253Cstrong%253EError%21%253C%252Fstrong%253E%2520This%2520is%2520an%2520Error%2520Alert%250A%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%253Cdiv%2520class%253D%2522alert%2520outline-success%2520flex%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fcheck-solid.svg%2522%2520%252F%253E%250A%2520%2520%2520%2520%253Cstrong%253ESuccess%21%253C%252Fstrong%253E%2520This%2520is%2520a%2520Success%2520Alert%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 500px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522alert%2520outline-primary%2520flex%2522%253E%250A%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fhome-solid.svg%2522%2520%252F%253E%250A%2520%2520%253Cstrong%253EPrimary%21%253C%252Fstrong%253E%2520This%2520is%2520a%2520Primary%2520Alert%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522alert%2520outline-warning%2520flex%2522%253E%250A%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fexclamation-solid.svg%2522%2520%252F%253E%250A%2520%2520%253Cstrong%253EWarning%21%253C%252Fstrong%253E%2520This%2520is%2520a%2520Warning%2520Alert%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522alert%2520outline-error%2520flex%2522%253E%250A%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252F%252Fsvg%252Ftimes-solid.svg%2522%2520%252F%253E%250A%2520%2520%253Cstrong%253EError%21%253C%252Fstrong%253E%2520This%2520is%2520an%2520Error%2520Alert%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522alert%2520outline-success%2520flex%2522%253E%250A%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Fcheck-solid.svg%2522%2520%252F%253E%250A%2520%2520%253Cstrong%253ESuccess%21%253C%252Fstrong%253E%2520This%2520is%2520a%2520Success%2520Alert%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
