--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Avatar</title>
+    <title>Avatar | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <nav class="">
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -22,7 +22,6 @@
               >Github</a
             >
           </div>
-          <!-- <div></div> -->
         </nav>
       </div>
 
@@ -59,6 +58,9 @@
                 <a href="/Components/Card/card.html"> Card </a>
               </li>
               <li>
+                <a href="/Components/grid/grid.html"> Grid </a>
+              </li>
+              <li>
                 <a href="/Components/image/image.html"> Image </a>
               </li>
               <li>
@@ -68,10 +70,21 @@
                 <a href="/Components/list/list.html"> List </a>
               </li>
               <li>
+                <a href="/Components/modal/modal.html"> Modal </a>
+              </li>
+              <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
               <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
+              </li>
+              <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
+              </li>
+              <li>
+                <a href="/Components/typography/typography.html">
+                  Typography
+                </a>
               </li>
             </ul>
           </div>
@@ -86,6 +99,7 @@
 
           <div class="divider"></div>
 
+          <!-- Standard Avatar  -->
           <div class="content-head mb-4">Standard Avatar</div>
 
           <div class="content-subtitle">
@@ -112,21 +126,17 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%250A%2520%2520class%253D%2522standard__avatars%2520flex%2520flex-col%2520flex-items-center%2520justify-between%2522%250A%253E%250A%2520%2520%253Ch3%253EStandard%2520Avatars%253C%252Fh3%253E%250A%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520squared-avatar%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 500px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%250A%2520%2520class%253D%2522standard__avatars%2520flex%2520flex-col%2520flex-items-center%2520justify-between%2522%250A%253E%250A%2520%2520%253Ch3%253EStandard%2520Avatars%253C%252Fh3%253E%250A%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520squared-avatar%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
+          <!-- Hoverable Avatar  -->
           <div class="content-head mb-4">Avatar with Hover</div>
 
           <div class="content-subtitle">
@@ -154,18 +164,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%250A%2520%2520class%253D%2522standard__avatars%2520flex%2520flex-col%2520flex-items-center%2520justify-between%2522%250A%253E%250A%2520%2520%253Ch3%253EAvatar%2520with%2520hover%253C%252Fh3%253E%250A%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520hover-avatar%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520squared-avatar%2520hover-avatar%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 500px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%250A%2520%2520class%253D%2522standard__avatars%2520flex%2520flex-col%2520flex-items-center%2520justify-between%2522%250A%253E%250A%2520%2520%253Ch3%253EAvatar%2520with%2520hover%253C%252Fh3%253E%250A%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520hover-avatar%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520squared-avatar%2520hover-avatar%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
@@ -217,18 +222,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%250A%2520%2520class%253D%2522sized__avatars%2520flex%2520flex-col%2520flex-items-center%2520justify-between%2522%250A%253E%250A%2520%2520%253Ch3%253EDifferent%2520sized%2520Avatars%253C%252Fh3%253E%250A%2520%2520%253Cdiv%2520class%253D%2522flex%2520flex-items-center%2522%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520xs%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Small%2520Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520sm%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Small%2520Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520md%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Small%2520Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520lg%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Small%2520Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520xl%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Medium%2520Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520class%253D%2522avatar%2520xxl%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Large%2520Fish%2522%250A%2520%2520%2520%2520%252F%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 500px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522flex%2520flex-items-center%2522%253E%250A%2520%2520%253Cimg%250A%2520%2520%2520%2520class%253D%2522avatar%2520xs%2522%250A%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520alt%253D%2522Small%2520Fish%2522%250A%2520%2520%252F%253E%250A%2520%2520%253Cimg%250A%2520%2520%2520%2520class%253D%2522avatar%2520sm%2522%250A%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520alt%253D%2522Small%2520Fish%2522%250A%2520%2520%252F%253E%250A%2520%2520%253Cimg%250A%2520%2520%2520%2520class%253D%2522avatar%2520md%2522%250A%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520alt%253D%2522Small%2520Fish%2522%250A%2520%2520%252F%253E%250A%2520%2520%253Cimg%250A%2520%2520%2520%2520class%253D%2522avatar%2520lg%2522%250A%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520alt%253D%2522Small%2520Fish%2522%250A%2520%2520%252F%253E%250A%2520%2520%253Cimg%250A%2520%2520%2520%2520class%253D%2522avatar%2520xl%2522%250A%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520alt%253D%2522Medium%2520Fish%2522%250A%2520%2520%252F%253E%250A%2520%2520%253Cimg%250A%2520%2520%2520%2520class%253D%2522avatar%2520xxl%2522%250A%2520%2520%2520%2520src%253D%2522..%252F..%252Fassets%252Fimages%252Fimage2.jpg%2522%250A%2520%2520%2520%2520alt%253D%2522Large%2520Fish%2522%250A%2520%2520%252F%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
