--- a/components/button/button.html
+++ b/components/button/button.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Button</title>
+    <title>Button | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -59,6 +59,9 @@
                 <a href="/Components/Card/card.html"> Card </a>
               </li>
               <li>
+                <a href="/Components/grid/grid.html"> Grid </a>
+              </li>
+              <li>
                 <a href="/Components/image/image.html"> Image </a>
               </li>
               <li>
@@ -68,10 +71,21 @@
                 <a href="/Components/list/list.html"> List </a>
               </li>
               <li>
+                <a href="/Components/modal/modal.html"> Modal </a>
+              </li>
+              <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
               <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
+              </li>
+              <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
+              </li>
+              <li>
+                <a href="/Components/typography/typography.html">
+                  Typography
+                </a>
               </li>
             </ul>
           </div>
@@ -102,18 +116,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=800&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522flex%2522%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520default-btn%2522%253EDefault%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520primary-btn%2522%253EPrimary%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520secondary-btn%2522%253ESecondary%253C%252Fbutton%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 263px;
-              border: 0;
-              transform: scale();
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522flex%2522%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520default-btn%2522%253EDefault%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520primary-btn%2522%253EPrimary%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520secondary-btn%2522%253ESecondary%253C%252Fbutton%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
@@ -133,18 +142,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=800&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522flex%2522%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520default-outline%2522%253EDefault%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520primary-outline%2522%253EPrimary%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520secondary-outline%2522%253ESecondary%253C%252Fbutton%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 263px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522flex%2522%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520default-outline%2522%253EDefault%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520primary-outline%2522%253EPrimary%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522btn%2520secondary-outline%2522%253ESecondary%253C%252Fbutton%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
@@ -167,20 +171,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=800&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522flex%2522%253E%250A%2520%2520%253Cbutton%2520class%253D%2522fab-btn%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520src%253D%2522%252Fassets%252Fsvg%252Fhistory.svg%2522%2520%252F%253E%250A%2520%2520%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522fab-btn%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520src%253D%2522%252Fassets%252Fsvg%252Fdelete.svg%2522%2520%252F%253E%250A%2520%2520%253C%252Fbutton%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 319px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-
-          <div class="divider"></div>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522flex%2522%253E%250A%2520%2520%253Cbutton%2520class%253D%2522fab-btn%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520src%253D%2522%252Fassets%252Fsvg%252Fhistory.svg%2522%2520%252F%253E%250A%2520%2520%253C%252Fbutton%253E%250A%2520%2520%253Cbutton%2520class%253D%2522fab-btn%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520src%253D%2522%252Fassets%252Fsvg%252Fdelete.svg%2522%2520%252F%253E%250A%2520%2520%253C%252Fbutton%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
