--- a/components/grid/grid.html
+++ b/components/grid/grid.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Grid</title>
+    <title>Grid | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -44,16 +44,16 @@
                 <a href="/components/alert/alert.html"> Alert </a>
               </li>
               <li>
-                <a href="/Components/avatar/avatar.html"> Avatar </a>
+                <a href="/Components/Avatar/avatar.html"> Avatar </a>
               </li>
               <li>
-                <a href="/Components/badge/badge.html"> Badge </a>
+                <a href="/Components/Badge/badge.html"> Badge </a>
               </li>
               <li>
-                <a href="/Components/button/button.html"> Button </a>
+                <a href="/Components/Button/button.html"> Button </a>
               </li>
               <li>
-                <a href="/Components/card/card.html"> Card </a>
+                <a href="/Components/Card/card.html"> Card </a>
               </li>
               <li>
                 <a class="active" href="/Components/grid/grid.html"> Grid </a>
@@ -62,16 +62,27 @@
                 <a href="/Components/image/image.html"> Image </a>
               </li>
               <li>
-                <a href="/Components/input/input.html"> Input </a>
+                <a href="/Components/Input/input.html"> Input </a>
               </li>
               <li>
                 <a href="/Components/list/list.html"> List </a>
               </li>
               <li>
+                <a href="/Components/modal/modal.html"> Modal </a>
+              </li>
+              <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
               <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
+              </li>
+              <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
+              </li>
+              <li>
+                <a href="/Components/typography/typography.html">
+                  Typography
+                </a>
               </li>
             </ul>
           </div>
@@ -96,18 +107,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522grid%2520two-comps%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25201%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25202%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 245px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522grid%2520two-comps%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25201%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25202%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
@@ -121,18 +127,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522grid%2520three-comps%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25201%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25202%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25203%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 263px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522grid%2520three-comps%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25201%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25202%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522component%2522%253EItem%25203%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
