--- a/components/list/list.html
+++ b/components/list/list.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/base.css" />
-    <title>List</title>
+    <title>List | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -45,31 +45,45 @@
                 <a href="/components/alert/alert.html"> Alert </a>
               </li>
               <li>
-                <a href="/Components/avatar/avatar.html"> Avatar </a>
+                <a href="/Components/Avatar/avatar.html"> Avatar </a>
               </li>
               <li>
-                <a href="/Components/badge/badge.html"> Badge </a>
+                <a href="/Components/Badge/badge.html"> Badge </a>
               </li>
               <li>
-                <a href="/Components/button/button.html"> Button </a>
+                <a href="/Components/Button/button.html"> Button </a>
               </li>
               <li>
-                <a href="/Components/card/card.html"> Card </a>
+                <a href="/Components/Card/card.html"> Card </a>
+              </li>
+              <li>
+                <a href="/Components/grid/grid.html"> Grid </a>
               </li>
               <li>
                 <a href="/Components/image/image.html"> Image </a>
               </li>
               <li>
-                <a href="/Components/input/input.html"> Input </a>
+                <a href="/Components/Input/input.html"> Input </a>
               </li>
               <li>
                 <a class="active" href="/Components/list/list.html"> List </a>
               </li>
               <li>
+                <a href="/Components/modal/modal.html"> Modal </a>
+              </li>
+              <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
               <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
+              </li>
+              <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
+              </li>
+              <li>
+                <a href="/Components/typography/typography.html">
+                  Typography
+                </a>
               </li>
             </ul>
           </div>
@@ -100,18 +114,13 @@
             </ol>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Col%2520class%253D%2522list%2522%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EA%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EAnother%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EYet%2520another%2520product%253C%252Fli%253E%250A%253C%252Fol%253E"
-            style="
-              width: 1000px;
-              height: 279px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Col%2520class%253D%2522list%2522%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EA%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EAnother%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EYet%2520another%2520product%253C%252Fli%253E%250A%253C%252Fol%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
@@ -130,20 +139,17 @@
             </ul>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list%2522%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EA%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EAnother%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EYet%2520another%2520product%253C%252Fli%253E%250A%253C%252Ful%253E"
-            style="
-              width: 1000px;
-              height: 279px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list%2522%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EA%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EAnother%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253EYet%2520another%2520product%253C%252Fli%253E%250A%253C%252Ful%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
+
+          <!-- Spaced List  -->
 
           <div class="content-head mb-4">Spaced List</div>
 
@@ -160,21 +166,17 @@
             </ul>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list%2520flex%2520list-style%2522%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2520m-4%2522%253EA%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2520m-4%2522%253EAnother%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2520m-4%2522%253EYet%2520another%2520product%253C%252Fli%253E%250A%253C%252Ful%253E"
-            style="
-              width: 1000px;
-              height: 279px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list%2520flex%2520list-style%2522%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2520m-4%2522%253EA%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2520m-4%2522%253EAnother%2520product%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2520m-4%2522%253EYet%2520another%2520product%253C%252Fli%253E%250A%253C%252Ful%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
+          <!-- Stacked List  -->
           <div class="content-head mb-4">Stacked List</div>
 
           <div class="content-subtitle">
@@ -196,19 +198,13 @@
             </ul>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list%2520list-style%2522%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list-item-stacked%2522%253EA%2520product%253C%252Fdiv%253E%250A%2520%2520%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list-item-stacked%2522%253EAnother%2520product%253C%252Fdiv%253E%250A%2520%2520%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list-item-stacked%2522%253EYet%2520Another%2520product%253C%252Fdiv%253E%250A%2520%2520%253C%252Fli%253E%250A%253C%252Ful%253E"
-            style="
-              width: 1000px;
-              height: 391px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-          <div class="divider"></div>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list%2520list-style%2522%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list-item-stacked%2522%253EA%2520product%253C%252Fdiv%253E%250A%2520%2520%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list-item-stacked%2522%253EAnother%2520product%253C%252Fdiv%253E%250A%2520%2520%253C%252Fli%253E%250A%2520%2520%253Cli%2520class%253D%2522list-item%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list-item-stacked%2522%253EYet%2520Another%2520product%253C%252Fdiv%253E%250A%2520%2520%253C%252Fli%253E%250A%253C%252Ful%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
