--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Modal</title>
+    <title>Modal | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -45,26 +45,25 @@
                 <a href="/components/alert/alert.html"> Alert </a>
               </li>
               <li>
-                <a href="/Components/avatar/avatar.html"> Avatar </a>
+                <a href="/Components/Avatar/avatar.html"> Avatar </a>
               </li>
               <li>
-                <a href="/Components/badge/badge.html"> Badge </a>
+                <a href="/Components/Badge/badge.html"> Badge </a>
               </li>
               <li>
-                <a href="/Components/button/button.html"> Button </a>
-              </li>
-
-              <li>
-                <a href="/Components/card/card.html"> Card </a>
+                <a href="/Components/Button/button.html"> Button </a>
               </li>
               <li>
-                <a href="/components/grid/grid.html"> Grid </a>
+                <a href="/Components/Card/card.html"> Card </a>
+              </li>
+              <li>
+                <a href="/Components/grid/grid.html"> Grid </a>
               </li>
               <li>
                 <a href="/Components/image/image.html"> Image </a>
               </li>
               <li>
-                <a href="/Components/input/input.html"> Input </a>
+                <a href="/Components/Input/input.html"> Input </a>
               </li>
               <li>
                 <a href="/Components/list/list.html"> List </a>
@@ -76,6 +75,9 @@
               </li>
               <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
+              </li>
+              <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
               </li>
               <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
@@ -98,7 +100,7 @@
 
           <div class="divider"></div>
 
-          <!-- Image -->
+          <!-- Modal -->
 
           <div class="content-head mb-4">Modal</div>
 
@@ -120,20 +122,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522modal%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522modal-heading%2522%253EModal%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522modal-subhead%2522%253EEveryone%2520likes%2520cookies%252C%2520do%2520you%253F%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522modal-btns%2522%253E%250A%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520primary-btn%2522%253ESure%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520default-btn%2522%253ENo%21%253C%252Fbutton%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522modal-close%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Ftimes-solid.svg%2522%2520%252F%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-            style="
-              width: 1000px;
-              height: 375px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-
-          <div class="divider"></div>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522modal%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522modal-heading%2522%253EModal%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522modal-subhead%2522%253EEveryone%2520likes%2520cookies%252C%2520do%2520you%253F%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522modal-btns%2522%253E%250A%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520primary-btn%2522%253ESure%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520default-btn%2522%253ENo%21%253C%252Fbutton%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522modal-close%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522svg%2522%2520src%253D%2522%252Fassets%252Fsvg%252Ftimes-solid.svg%2522%2520%252F%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
