--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="/css/base.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar</title>
+    <title>Navbar | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -45,25 +45,31 @@
                 <a href="/components/alert/alert.html"> Alert </a>
               </li>
               <li>
-                <a href="/Components/avatar/avatar.html"> Avatar </a>
+                <a href="/Components/Avatar/avatar.html"> Avatar </a>
               </li>
               <li>
-                <a href="/Components/badge/badge.html"> Badge </a>
+                <a href="/Components/Badge/badge.html"> Badge </a>
               </li>
               <li>
-                <a href="/Components/button/button.html"> Button </a>
+                <a href="/Components/Button/button.html"> Button </a>
               </li>
               <li>
-                <a href="/Components/card/card.html"> Card </a>
+                <a href="/Components/Card/card.html"> Card </a>
+              </li>
+              <li>
+                <a href="/Components/grid/grid.html"> Grid </a>
               </li>
               <li>
                 <a href="/Components/image/image.html"> Image </a>
               </li>
               <li>
-                <a href="/Components/input/input.html"> Input </a>
+                <a href="/Components/Input/input.html"> Input </a>
               </li>
               <li>
                 <a href="/Components/list/list.html"> List </a>
+              </li>
+              <li>
+                <a href="/Components/modal/modal.html"> Modal </a>
               </li>
               <li>
                 <a class="active" href="/Components/navbar/navbar.html">
@@ -71,7 +77,15 @@
                 </a>
               </li>
               <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
+              </li>
+              <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
+              </li>
+              <li>
+                <a href="/Components/typography/typography.html">
+                  Typography
+                </a>
               </li>
             </ul>
           </div>
@@ -86,7 +100,7 @@
 
           <div class="divider"></div>
 
-          <!-- Standard Input -->
+          <!-- Navbar -->
 
           <div class="content-head mb-4">Navbar</div>
 
@@ -109,20 +123,13 @@
             </div>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cnav%253E%250A%2520%253Cdiv%2520class%253D%2522flex%2520flex-items-center%2520justify-between%2522%253E%250A%2520%2520%253Ch3%2520class%253D%2522nav-logo%2522%253ELogo%253C%252Fh3%253E%250A%2520%2520%253Cdiv%2520class%253D%2522nav-right%2520flex%2522%253E%250A%2520%2520%2520%2520%253Ca%2520class%253D%2522right-nav%2520flex%2522%2520href%253D%2522%2523%2522%253EHome%253C%252Fa%253E%250A%2520%2520%2520%2520%253Ca%2520class%253D%2522right-nav%2520flex%2522%2520href%253D%2522%2523%2522%253EAbout%253C%252Fa%253E%250A%2520%2520%2520%2520%253Ca%2520class%253D%2522right-nav%2520flex%2522%2520href%253D%2522%2523%2522%253EGithub%253C%252Fa%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%253C%252Fdiv%253E%250A%253C%252Fnav%253E"
-            style="
-              width: 1000px;
-              height: 356px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-
-          <div class="divider"></div>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cnav%253E%250A%2520%2520%253Cdiv%2520class%253D%2522flex%2520flex-items-center%2520justify-between%2522%253E%250A%2520%2520%2520%2520%253Ch3%2520class%253D%2522nav-logo%2522%253ELogo%253C%252Fh3%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522nav-right%2520flex%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520class%253D%2522right-nav%2520flex%2522%2520href%253D%2522%2523%2522%253EHome%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520class%253D%2522right-nav%2520flex%2522%2520href%253D%2522%2523%2522%253EAbout%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520class%253D%2522right-nav%2520flex%2522%2520href%253D%2522%2523%2522%253EGithub%253C%252Fa%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fnav%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
