--- a/components/typography/typography.html
+++ b/components/typography/typography.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Typography</title>
+    <title>Typography | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
             <a
@@ -52,8 +52,12 @@
               <li>
                 <a href="/Components/button/button.html"> Button </a>
               </li>
+
               <li>
                 <a href="/Components/card/card.html"> Card </a>
+              </li>
+              <li>
+                <a href="/components/grid/grid.html"> Grid </a>
               </li>
               <li>
                 <a href="/Components/image/image.html"> Image </a>
@@ -65,7 +69,13 @@
                 <a href="/Components/list/list.html"> List </a>
               </li>
               <li>
+                <a href="/Components/modal/modal.html"> Modal </a>
+              </li>
+              <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
+              </li>
+              <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
               </li>
               <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
@@ -104,18 +114,13 @@
             <h6 class="pb-2">Make your back straight, NOW!!</h6>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Ch1%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh1%253E%250A%253Ch2%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh2%253E%250A%253Ch3%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh3%253E%250A%253Ch4%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh4%253E%250A%253Ch5%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh5%253E%250A%253Ch6%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh6%253E"
-            style="
-              width: 1000px;
-              height: 282px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Ch1%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh1%253E%250A%253Ch2%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh2%253E%250A%253Ch3%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh3%253E%250A%253Ch4%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh4%253E%250A%253Ch5%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh5%253E%250A%253Ch6%2520class%253D%2522pb-2%2522%253EMake%2520your%2520back%2520straight%252C%2520NOW%21%21%253C%252Fh6%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
@@ -129,18 +134,13 @@
             <p class="light-text">Light text</p>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cp%2520class%253D%2522bold-text%2522%253EBold%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522normal-text%2522%253ENormal%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522light-text%2522%253ELight%2520text%253C%252Fp%253E"
-            style="
-              width: 1000px;
-              height: 226px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cp%2520class%253D%2522bold-text%2522%253EBold%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522normal-text%2522%253ENormal%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522light-text%2522%253ELight%2520text%253C%252Fp%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
 
           <div class="divider"></div>
 
@@ -153,20 +153,13 @@
             <p class="gray-text">Gray text</p>
           </div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cp%2520class%253D%2522black-text%2522%253EBlack%2520Text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522gray-text%2522%253EGray%2520text%253C%252Fp%253E"
-            style="
-              width: 1000px;
-              height: 207px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
-
-          <div class="divider"></div>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=htmlmixed&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cp%2520class%253D%2522black-text%2522%253EBlack%2520Text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522gray-text%2522%253EGray%2520text%253C%252Fp%253E"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
